Cross-OS fix for layout overflow of footer and ACE editor

--- a/media/jetpack/css/UI.Layout.css
+++ b/media/jetpack/css/UI.Layout.css
@@ -74,6 +74,7 @@ a:hover {
 	#app-header nav {
 		float: right;
 		margin: 9px 9px 0 0;
+		line-height: 18px;
 	}
    
 	#app-header nav li {
@@ -157,7 +158,7 @@ a:hover {
 	display: block;
 	float: left;
 	font-size: 2.0em;
-	margin: 4px 0 0;
+	margin: 5px 0 0;
 }
 
 	#flightdeck-logo a {
@@ -181,7 +182,7 @@ a:hover {
 	display: block;
 	background: url(../img/mozilla/mozilla_logo.png) 0 0 no-repeat;
 	text-indent: -900em;
-	margin-top: 9px;
+	margin-top: 10px;
 }
 
 /*
@@ -495,7 +496,8 @@ kbd {
 
 #footer
 {
-	margin-top: 107px;    
+	margin-top: 102px; 
+	line-height: 18px;
 	color: #fff;	
 }
 #footer a {
